# rehome-kb-platform

./: README.md
backend/: .dockerignore  Dockerfile  README.md  pyproject.toml  requirements-dev.txt  requirements-rag.txt  requirements.txt
backend/alembic/versions/: 20260512_074846_articles_list_index.py  20260512_100558_articles_tags_gin_index.py  20260512_103535_article_versions.py  20260512_123251_articles_search_vector.py  20260512_140000_categories_table.py  20260512_150000_documents_table.py  20260513_020000_webhook_deliveries.py  20260513_040000_article_embeddings.py  20260514_010000_premises_cards.py  20260516_010000_collaborators_foundation.py  20260517_010000_collaborators_portal_access.py  20260517_030000_collaborator_reviews.py  20260518_010000_search_query_log.py  20260518_020000_service_orders.py  20260519_010000_kb_users.py  20260519_120000_merge_0024_heads.py  20260520_010000_security_incidents.py  20260521_010000_personal_data_requests.py  20260522_010000_hr_pii_encrypted_columns.py  20260523_010000_merge_0024_after_hr_pii.py  20260523_020000_admin_tasks.py  20260523_030000_system_config.py
backend/src/api/: config.py  main.py
backend/src/api/admin/: __init__.py  audit_log_router.py  audit_log_schemas.py  eval_runs_router.py  eval_runs_schemas.py  eval_runs_service.py  llm_providers.py  operational_router.py  pd_requests_models.py  pd_requests_repository.py  pd_requests_router.py  (+18 more)
backend/src/eval/: __init__.py  cli.py  dataset.py  judge.py  metrics.py  report.py  runner.py
backend/tests/eval/: golden.jsonl
backend/tests/integration/: conftest.py  test_articles_etag.py  test_articles_history.py  test_articles_list.py  test_articles_search.py  test_articles_write.py  test_categories_list.py  test_chat_messages.py  test_chat_sessions.py  test_chat_sse.py  test_documents.py  test_hr_access.py  test_m2m_token_flow.py  test_oidc_realm_discovery.py  test_search_endpoint.py  test_tags_list.py  test_webhooks_e2e.py  test_whoami_with_real_jwt.py
backend/tests/unit/: conftest.py  test_audit_resource_sync.py  test_audit_search.py  test_health.py  test_main_lifespan.py
(+463 files in other folders)
