[project]
name = "rehome-kb-api"
version = "0.0.1"
description = "reHome Knowledge Base API gateway (kb-infra)"
requires-python = ">=3.12"
readme = "README.md"
license = { text = "Proprietary" }

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "W",   # pycodestyle warnings
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
    "RET", # flake8-return
    "ARG", # flake8-unused-arguments
    "PT",  # flake8-pytest-style
    "RUF", # ruff-specific
]
ignore = [
    # Project is bilingual ru/en: strings, docstrings, comments use Cyrillic
    # that visually resembles Latin (С/с/В/в/Н/а etc.). This is by design.
    # RUF001 (string literals), RUF002 (docstrings), RUF003 (comments).
    "RUF001",
    "RUF002",
    "RUF003",
    # FastAPI's idiomatic pattern uses `Depends()` in default arguments,
    # which flake8-bugbear flags. This is the standard practice — explicitly
    # acknowledged in FastAPI docs.
    "B008",
]

[tool.ruff.lint.per-file-ignores]
# Tests: pytest fixtures pass via argument-name dependency injection;
# pytest "uses" them by virtue of being in the signature, even if not
# referenced in the body. ARG001 (unused argument) is not meaningful here.
"tests/**" = ["S101", "ARG001"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_ignores = true
show_error_codes = true
files = ["src", "tests"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_decorators = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
pythonpath = ["."]
addopts = "-v --strict-markers"
asyncio_mode = "auto"
markers = [
    "security: security tests (access_level bypass attempts)",
]

[tool.coverage.run]
source = ["src"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
]
